--- a/odev1/styles.css
+++ b/odev1/styles.css
@@ -1,11 +1,11 @@
 
 
-.container div{
+.container div{/*3 divi içeren container*/
   margin-bottom: 50px;
   border-width: 2px;
   border-style: solid;
 }
-.title{
+.title{/*divlerin başlıklarının stili*/
   border-style: solid;
   border-width: 1px;
   float: right;
@@ -14,28 +14,28 @@
   text-align: center;
 }
 
-#panel1{
+#panel1/*1. div*/{
   background: orange;
 }
-#panel2{
+#panel2/*2. div*/{
   background: red;
 }
-#panel3{
+#panel3/*3. div*/{
   background: green;
 }
-@media(min-width:992px){
+@media(min-width:992px){/*Desktop*/
   #panel1{float:left;margin-left: 2%;margin-right: 0;width: 30%}
   #panel2{float:left;margin-left: 2%;margin-right: 2%;width: 30%}
   #panel3{float:left;margin-left: 0;margin-right: 2%;width: 30%}
 }
 
-@media(min-width:768px) and (max-width:991px){
+@media(min-width:768px) and (max-width:991px){/*Tablet*/
   #panel1{float:left;width: 46%;margin-left: 2%;margin-right:1%;}
   #panel2{float:left;width: 46%;margin-left: 1%;margin-right: 2%;}
   #panel3{float:left;width: 95%;margin-left: 2%;margin-right: 2%;}
 }
 
-@media(max-width:767px){
+@media(max-width:767px){/*Phone*/
   #panel1{float:left;margin-left: 2%;margin-right: 2%;width: 94%}
   #panel2{float:left;margin-left: 2%;margin-right: 2%;width: 94%}
   #panel3{float:left;margin-left: 2%;margin-right: 2%;width: 94%}
