--- a/odev1/styles.css
+++ b/odev1/styles.css
@@ -5,7 +5,7 @@
   border-width: 2px;
   border-style: solid;
 }
-.title{/*divlerin başlıklarının stili*/
+.title{/*divlerin başlıkları için style*/
   border-style: solid;
   border-width: 1px;
   float: right;
